change rest api from '/v1/xxx' to '/v1/kie/xxx', add project field in label schema
